--- a/scss/components/_keypress.scss
+++ b/scss/components/_keypress.scss
@@ -100,4 +100,8 @@
       }
     }
   }
+
+  image {
+    transform: scale(0.8);
+  }
 }
